--- a/qemu/hardware/display/BUILD.gn
+++ b/qemu/hardware/display/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (C) 2021-2022 HiHope Open Source Organization .
+# Copyright (c) 2023 Diemit <598757652@qq.com>
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -12,90 +12,138 @@
 # limitations under the License.
 
 import("//build/ohos.gni")
+import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")
 
-group("display_group") {
+group("display_buffer_model") {
   deps = [
-    ":display_device",
-    ":display_gfx",
-    ":display_gralloc",
-    ":higbm",
+    ":libdisplay_buffer_vdi_impl",
+    ":libdisplay_buffer_vendor",
   ]
 }
 
-ohos_static_library("higbm") {
-  sources = [ "src/display_gralloc/hi_gbm.c" ]
+config("libdisplay_buffer_vdi_impl_config") {
+  include_dirs = [ "src/display_gralloc" ]
+}
+
+ohos_shared_library("libdisplay_buffer_vdi_impl") {
+  sources = [ "src/display_gralloc/display_buffer_vdi_impl.cpp" ]
+
+  public_configs = [ ":libdisplay_buffer_vdi_impl_config" ]
+
   include_dirs = [
     "include",
-    "//commonlibrary/c_utils/base/include",
-    "//base/hiviewdfx/interfaces/innerkits/libhilog/include",
+    "src/display_gralloc",
+    "//drivers/peripheral/base",
+    "//drivers/interface/display/composer/hdifd_parcelable",
+    "//drivers/interface/display/buffer",
+    "//drivers/peripheral/display/utils/include",
+    "//drivers/peripheral/display/buffer/hdi_service/include",
   ]
-  output_name = "higbm"
+
+  output_name = "libdisplay_buffer_vdi_impl"
   cflags = [
     "-DGRALLOC_GBM_SUPPORT",
     "-Wno-macro-redefined",
   ]
-  deps = [ "//third_party/libdrm:libdrm" ]
+
+  deps = [ ":libdisplay_buffer_vendor" ]
+
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "drivers_interface_display:display_buffer_idl_headers",
+    "drivers_interface_display:display_composer_idl_headers",
+    "hdf_core:libhdf_utils",
+    "hilog:libhilog",
+    "ipc:ipc_single",
   ]
+
+  install_enable = true
+  install_images = [ chipset_base_dir ]
+  innerapi_tags = [ "passthrough" ]
+  part_name = "device_qemu"
 }
 
+ohos_shared_library("libdisplay_buffer_vendor") {
+  sources = [ 
+      "src/display_gralloc/display_gralloc_gbm.cpp",
+      "src/display_gralloc/hi_gbm.cpp"
+    ]
 
-ohos_shared_library("display_gralloc") {
-  sources = [
-    "src/display_gralloc/display_gralloc.c",
-    "src/display_gralloc/display_gralloc_gbm.c",
-  ]
   include_dirs = [
     "include",
-    "//drivers/peripheral/display/interfaces/include",
+    "src/display_gralloc",
     "//drivers/peripheral/base",
-    "//drivers/hdf_core/framework/include/utils",
-    "//drivers/hdf_core/adapter/uhdf2/osal/include",
-    "//commonlibrary/c_utils/base/include",
-    "//foundation/graphic/standard/utils/include",
-    "//foundation/graphic/standard/prebuilts/librarys/drm/include",
-    "//base/hiviewdfx/interfaces/innerkits/libhilog/include",
+    "//drivers/interface/display/composer/hdifd_parcelable",
+    "//drivers/peripheral/display/utils/include",
+    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
   ]
-  output_name = "display_gralloc"
+
+  output_name = "libdisplay_buffer_vendor"
   cflags = [
     "-DGRALLOC_GBM_SUPPORT",
     "-Wno-macro-redefined",
   ]
+
   deps = [
-    ":higbm",
     "//third_party/libdrm:libdrm",
   ]
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "drivers_interface_display:display_buffer_idl_headers",
+    "drivers_interface_display:display_composer_idl_headers",
+    "hdf_core:libhdf_utils",
+    "hilog:libhilog",
   ]
 
   install_enable = true
   install_images = [ chipset_base_dir ]
-  subsystem_name = "hdf"
-  part_name = "drivers_peripheral_display"
+  innerapi_tags = [ "passthrough" ]
+  part_name = "device_qemu"
 }
 
-
-config("display_device_pub_config") {
-  visibility = [ ":*" ]
-
-  include_dirs = [
-    "//drivers/peripheral/display/interfaces/include",
-    "//drivers/peripheral/base",
-    "src/display_device",
-    "include",
+group("display_composer_model") {
+  deps = [
+    ":display_composer_vendor",
+    ":display_gfx",
+    ":libdisplay_composer_vdi_impl",
   ]
 }
 
-ohos_shared_library("display_device") {
+ohos_shared_library("libdisplay_composer_vdi_impl") {
+  sources = [ "src/display_device/display_composer_vdi_impl.cpp" ]
+
+  include_dirs = [
+    "include",
+    "src/display_device",
+    "src/display_device/composer",
+    "src/display_device/core",
+    "src/display_device/drm",
+    "//drivers/peripheral/display/utils/include",
+    "//drivers/interface/display/composer",
+    "//drivers/peripheral/display/composer/hdi_service/include",
+    "//drivers/interface/display/composer/hdifd_parcelable",
+  ]
+
+  deps = [ ":display_composer_vendor" ]
+
+  external_deps = [
+    "c_utils:utils",
+    "drivers_interface_display:display_composer_idl_headers",
+    "graphic_surface:buffer_handle",
+    "hilog:libhilog",
+    "ipc:ipc_single",
+  ]
+
+  install_enable = true
+  install_images = [ chipset_base_dir ]
+  part_name = "device_qemu"
+}
+
+ohos_shared_library("display_composer_vendor") {
   sources = [
     "src/display_device/composer/hdi_composer.cpp",
     "src/display_device/composer/hdi_gfx_composition.cpp",
-    "src/display_device/composer/hdi_video_composition.cpp",
     "src/display_device/core/hdi_device_interface.cpp",
     "src/display_device/core/hdi_display.cpp",
     "src/display_device/core/hdi_layer.cpp",
@@ -109,115 +157,74 @@ ohos_shared_library("display_device") {
     "src/display_device/drm/drm_vsync_worker.cpp",
     "src/display_device/drm/hdi_drm_composition.cpp",
     "src/display_device/drm/hdi_drm_layer.cpp",
-    "src/display_device/fbdev/fb_composition.cpp",
-    "src/display_device/fbdev/fb_device.cpp",
-    "src/display_device/fbdev/fb_display.cpp",
-    "src/display_device/vsync/sorft_vsync.cpp",
-    "src/utils/display_adapter.cpp",
   ]
-  public_configs = [ ":display_device_pub_config" ]
 
-  output_name = "display_device"
+  output_name = "display_composer_vendor"
 
   include_dirs = [
-    "src/display_device",
     "include",
-    "//drivers/peripheral/display/interfaces/include",
-    "//drivers/peripheral/base",
+    "src/display_device",
     "src/display_device/drm",
-    "src/display_device/fbdev",
     "src/display_device/core",
     "src/display_device/composer",
-    "src/utils",
+    "src/display_gralloc",
+    "//drivers/peripheral/display/buffer/hdi_service/include",
+    "//drivers/peripheral/display/utils/include",
+    "//drivers/peripheral/base",
+    "//drivers/interface/display/composer",
+    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
+    "//drivers/interface/display/composer/hdifd_parcelable",
   ]
 
   deps = [
-    ":display_layer_video",
-    "//drivers/peripheral/display/hal:hdi_display_gralloc",
+    ":libdisplay_buffer_vdi_impl",
     "//third_party/libdrm:libdrm",
   ]
 
-  cflags = [ "-Wno-unused-function" ]
-
-  external_deps = [
-    "c_utils:utils",
-    "hdf_core:libhdf_utils",
-    "hitrace_native:hitrace_meter",
-    "hiviewdfx_hilog_native:libhilog",
-  ]
-
-  symlink_target_name = [ "libdisplay_layer.z.so" ]
-
-  install_enable = true
-  install_images = [ system_base_dir ]
-  relative_install_dir = "chipset-sdk"
-  subsystem_name = "hdf"
-  part_name = "drivers_peripheral_display"
-}
-
-ohos_shared_library("display_layer_video") {
-  sources = [ "src/display_layer_video/display_layer_video.cpp" ]
-  public_configs = [ ":display_device_pub_config" ]
-
-  output_name = "display_layer_video"
-  include_dirs = [
-    "//drivers/peripheral/display/interfaces/include",
-    "//drivers/peripheral/base",
-    "//drivers/peripheral/display/hdi_service/video_layer/client",
-    "//drivers/hdf_core/adapter/uhdf2/include/hdi",
+  cflags_cc = [
+    "-Wno-error=unused-function",
+    "-Wno-error=missing-braces",
+    "-Wno-error=#warnings",
+    "-Wno-error=unused-const-variable",
   ]
 
   external_deps = [
     "c_utils:utils",
-    "hdf_core:libhdf_host",
-    "hdf_core:libhdf_ipc_adapter",
+    "drivers_interface_display:display_buffer_idl_headers",
+    "drivers_interface_display:display_composer_idl_headers",
     "hdf_core:libhdf_utils",
-    "hdf_core:libhdi",
-    "hiviewdfx_hilog_native:libhilog",
-    "ipc:ipc_single",
+    "hilog:libhilog",
+    "hitrace:hitrace_meter",
   ]
-
-  public_deps = [ "//drivers/peripheral/display/hdi_service/video_layer/client:video_layer_client" ]
-
   install_enable = true
   install_images = [ chipset_base_dir ]
-  subsystem_name = "hdf"
-  part_name = "drivers_peripheral_display"
+  part_name = "device_qemu"
 }
 
 ohos_shared_library("display_gfx") {
-  sources = [ "src/display_gfx/display_gfx.c" ]
+  sources = [ "src/display_gfx/display_gfx.cpp" ]
   include_dirs = [
     "include",
-    "//drivers/peripheral/display/interfaces/include",
-    "//drivers/peripheral/base",
-    "//drivers/framework/include/utils",
-    "//drivers/adapter/uhdf2/adapter/osal/include/",
-    "//utils/native/base/include",
-    "//foundation/graphic/standard/utils/include",
     "//base/hiviewdfx/interfaces/innerkits/libhilog/include",
+    "//commonlibrary/c_utils/base/include",
+    "//drivers/peripheral/display/interfaces/include",
+    "//drivers/peripheral/display/utils/include",
+    "//drivers/peripheral/base",
+    "//drivers/interface/display/composer/hdifd_parcelable",
+    
   ]
   output_name = "display_gfx"
   cflags = [ "-Wno-macro-redefined" ]
-  deps = [
-    ":display_gralloc",
-  ]
 
   external_deps = [
     "c_utils:utils",
-    "hiviewdfx_hilog_native:libhilog",
+    "hdf_core:libhdf_utils",
+    "hilog:libhilog",
+    "drivers_interface_display:display_buffer_idl_headers",
+    "drivers_interface_display:display_composer_idl_headers",
   ]
 
   install_enable = true
   install_images = [ chipset_base_dir ]
-  subsystem_name = "hdf"
-  part_name = "drivers_peripheral_display"
-}
-
-group("display_layer") {
-  deps = [
-    ":display_device",
-    ":display_gfx",
-    ":display_gralloc",
-  ]
+  part_name = "device_qemu"
 }
